# projet-m2-bi

./: .gitignore  .terraform.lock.hcl  GUIDE_DEMARRAGE_PIPELINE.md  README.md  env.example  main.tf  outputs.tf  prefect.yml  pyproject.toml  requirements.txt  terraform.tfvars.example  variables.tf
dbt/: .user.yml  dbt_project.yml  profiles.tpl.yml  profiles.yml
docs/: AMOA.typ  pipeline_doc.md  webographie_amoa.yml
docs/graphs/: matrice_swot_amoa.excalidraw
documentation/: brouillon_dbt.md  explication_pipeline_prefect.md  pipeline_logic.md  resolution_probleme_credentials.md
infrastructure/: .terraform.lock.hcl  README.md  main.tf  outputs.tf  profiles.tpl  terraform-outputs.json  test.csv  variables.tf
infrastructure/setup_profiles/: README.md  __init__.py  __main__.py  config.py  flows.py  tasks.py
prefect/: README.md  block.py  pipeline.py
prefect_flows/: README.md  pipeline.py  pipeline_extended_example.py  test.py
utilities/: generate_env.py
