[project]
name = "projet-m2-bi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dbt-bigquery>=1.10.2",
    "dbt-core>=1.10.13",
    "prefect>=3.4.20",
    "prefect-cloud>=0.1.8",
    "prefect-dbt>=0.7.8",
    "prefect-gcp>=0.6.10",
]
